<resources>
    <string name="app_name">Trabalho3</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="lista_de_candidatos">Lista de candidatos cadastrados</string>
    <string name="cadastrar_candidato">Cadastrar Candidato</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="lista_de_escolas_encontradas">Lista de Escolas Encontradas</string>
    <string name="pesquisar_escola">Pesquisar Escola</string>
    <string name="buscar">Buscar</string>
    <string name="nome_completo_hint">Digite o nome completo</string>
    <string name="cpf_hint">Digite o CPF</string>
    <string name="pesquisar_escola_hint">Digite uma palavra chave</string>
    <string name="nome_escola">Nome da Escola</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="editar_candidato">Editar Candidato</string>
    <string name="visualizar_localizacao">Visualizar Localização</string>
    <string name="estado">Estado</string>
    <string name="prova">Prova</string>
    <string name="prova_hint">Digite o nome de sua prova</string>
    <string name="codigo">Código</string>
</resources>